kubernetes/base/components/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastcart-ingress
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://localhost:5173, http://127.0.0.1:5173"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, PUT, POST, DELETE, PATCH, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: fastcart-auth
            port:
              number: 8001
              
      - path: /products
        pathType: Prefix
        backend:
          service:
            name: fastcart-product
            port:
              number: 8002
              
      - path: /orders
        pathType: Prefix
        backend:
          service:
            name: fastcart-order
            port:
              number: 8003
              
      - path: /payments
        pathType: Prefix
        backend:
          service:
            name: fastcart-payment
            port:
              number: 8005
              
      - path: /reviews
        pathType: Prefix
        backend:
          service:
            name: fastcart-review
            port:
              number: 8006
